--- a/search/theme/search.css
+++ b/search/theme/search.css
@@ -83,9 +83,7 @@ a:hover {
 .leftbox,
 .rightbox {
 	width: auto;
-	/* margin-bottom: 16px; */
-	/* margin-top: 1px; */
-	margin: 1px 0 16px 1px;
+	margin: 1px 0 16px;
 }
 
 h3 {
